--- a/Google/Maps/css/estilos.css
+++ b/Google/Maps/css/estilos.css
@@ -1,8 +1,10 @@
  #map {
-    height: 100%;
+    height: 500px;
   }
-  html, body {
+/*  html, body {
     height: 100%;
     margin: 0;
     padding: 0;
   }
+*/
+  
