--- a/Google/Maps/css/estilos.css
+++ b/Google/Maps/css/estilos.css
@@ -1,6 +1,41 @@
  #map {
     height: 500px;
   }
+  #mapaLatLng {
+    height: 300px;
+  }
+  .pac-container{
+    background-color: #fff;
+    z-index: 20;
+    position: fixed;
+    display: inline-block;
+    float: left;
+  }
+
+
+  .modal{
+    z-index: 20;
+
+  }
+  .modal-backdrop{
+    z-index: 10;
+
+  }
+
+  #inputBusqueda{
+    background-color: #fff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 12px;
+    padding:0 11px 0 13px;
+    text-overflow:ellipsis;
+    width:400px;
+  }
+
+
+
+
 /*  html, body {
     height: 100%;
     margin: 0;
